@@ -23,7 +23,7 @@
 #define PROCPS_SLABINFO_H
 
 #ifdef __cplusplus
-extern "C "{
+extern "C" {
 #endif
 
 enum slabinfo_item {
